# Kalman

./: .gitignore  CMakeLists.txt  README.md  library.h
include/filters/: ExtendedKalmanFilter.h  KalmanFilter.h
src/: main.cpp
src/filters/: ExtendedKalmanFilter.cpp  KalmanFilter.cpp
